fix: overlay z-index

--- a/apps/gauzy/src/app/@theme/components/user-menu/user-menu.component.scss
+++ b/apps/gauzy/src/app/@theme/components/user-menu/user-menu.component.scss
@@ -63,3 +63,6 @@ p.link, .button, i, a{
   text-decoration: none;
   color: nb-theme(text-basic-color);
 }
+::ng-deep .cdk-overlay-container{
+  z-index: 1052;
+}
